Fix: input no longer overflows off modal in 320px screen size

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -160,7 +160,7 @@
   }
 
   .modal__label {
-    margin-bottom: 24px;
+    margin: 0 24px 24px 0;
   }
 
   .modal__submit-btn {
